--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-dj-database-url==0.4.0
 Django==1.9.4
+Fabric==1.11.1
+dj-database-url==0.4.0
 django-bootstrap3==7.0.1
 ecdsa==0.13
-Fabric==1.10.2
 gunicorn==19.4.5
-paramiko==1.16.0
+paramiko==1.17.0
 psycopg2==2.6.1
 pycrypto==2.6.1
 whitenoise==3.0
+wsgiref==0.1.2
